Home page designs

--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -22,8 +22,7 @@
 }
 
 .homeLinkButton {
-  @apply inline-flex items-center leading-6 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-black text-white rounded-full p-1 hover:scale-105 hover:bg-gray-900;
- 
+  @apply inline-flex items-center leading-6 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-slate-900 text-white rounded-full p-1 hover:scale-105 hover:bg-gray-900;
 }
 
 .subpageLinkButton {
