--- a/components/ui/Footer/Footer.module.css
+++ b/components/ui/Footer/Footer.module.css
@@ -6,11 +6,11 @@
 }
 
 .homeHeadline {
-  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-200 text-slate-600 rounded-md p-1;
+  @apply inline-flex items-center leading-6 font-bold transition ease-in-out duration-200 text-slate-600 rounded-md p-1;
 }
 
 .subpageHeadline {
-  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-200 text-zinc-200 rounded-md p-1;
+  @apply inline-flex items-center leading-6 font-bold transition ease-in-out duration-200 text-zinc-200 rounded-md p-1;
 }
 
 .homeLink {
@@ -30,12 +30,12 @@
 }
 
 .homeLinkButton {
-  @apply inline-flex items-center leading-6 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-slate-900 text-white rounded-full p-1 hover:scale-105 hover:bg-gray-900;
+  @apply inline-flex items-center leading-10 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-slate-900 text-white rounded-full p-3 hover:scale-105 hover:bg-gray-900;
  
 }
 
 .subpageLinkButton {
-  @apply inline-flex items-center leading-6 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-slate-800 text-zinc-200 rounded-full p-1 hover:scale-105;
+  @apply inline-flex items-center leading-6 font-semibold transition ease-in-out duration-200 cursor-pointer  bg-slate-800 text-zinc-200 rounded-full p-3 hover:scale-105;
  
 }
 
