--- a/app/HomePage.module.css
+++ b/app/HomePage.module.css
@@ -27,7 +27,7 @@
   display:flex;
   align-items: center;
   justify-content: center;
-  padding: 48px 0;
+  padding-bottom: 48px;
 }
 .homePage .headline h1{
   color: var(--black100);
