--- a/components/ui/HomePage/HomePage.module.css
+++ b/components/ui/HomePage/HomePage.module.css
@@ -75,7 +75,7 @@
 }
 
 .homePage .headline h2{
-  color: var(--black10);
+  color: var(--black100);
   text-align: center;
   font-size: 40px;
   font-weight: bold;
@@ -88,20 +88,9 @@
   padding: 80px 0 48px 0;
 }
 .homePage .headline.footer h1{
-  max-width: 294px;
+  max-width: 450px;
   margin: auto;
   padding-bottom: 16px;
-}
-.homePage .video{
-  max-width: 1040px;
-  max-height: 585px;
-  background-color: #0688F5;
-  border-radius: 24px;
-  margin: 80px auto;
-  overflow: hidden;
-}
-.homePage .video video {
-  width: 100%;
 }
 .homePage .features {
   padding-left: 80px;
@@ -119,25 +108,87 @@
   font-weight: 400;
 }
 .homePage .features .title {
-  color: var(--black10);
+  color: var(--black100);
   font-weight: 600;
 }
 .homePage .features .desc {
   margin-top: 20px;
-  color: var(--black5);
+  color: var(--black100);
 }
 .homePage .content{
   max-width: 540px;
   margin: auto;
 }
-@media screen and (max-width: 768px) { 
+
+.homePage .demo {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: min(calc(100% - 150px), 1400px);
+  margin: 150px auto;
+}
+
+.homePage .demo .desc h1 {
+  font-size: 30px;
+  font-weight: 400;
+  color: var(--black100);
+  align-items: flex-start;
+}
+
+.homePage .demo .gif {
+  width: 100%;
+  border-radius: 24px;
+  overflow: hidden;
+}
+
+.homePage .demo .gif img {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.animatedText {
+  overflow: hidden;
+  border-right: .12em solid black;
+  white-space: nowrap;
+  animation: typing 10s steps(10, end) infinite, blinking .8s infinite;
+  font-size: 32px;
+  width: 0;
+}
+@keyframes typing {
+  from { width: 0% }
+  to { width: 100% }
+}
+@keyframes blinking {
+  from { border-color: transparent }
+  to { border-color: black; }
+}
+
+@media (max-width: 768px) {
+  .homePage .demo {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    margin: 20px auto;
+    padding: 20px;
+  }
+  .homePage .demo .desc  {
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+  }
+  .homePage .demo .gif {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
   .homePage .features {
-      grid-template-columns: 1fr; 
+    grid-template-columns: 1fr; 
   }
   .homePage .headline h1 {
     font-size: 44px;
-  }
-  .homePage .container{
-    padding: 16px;
   }
 }
