--- a/components/ui/HomePage/HomePage.module.css
+++ b/components/ui/HomePage/HomePage.module.css
@@ -159,6 +159,7 @@
   font-size: 32px;
   width: 0;
 }
+
 @keyframes typing {
   from { width: 0% }
   to { width: 100% }
@@ -166,6 +167,48 @@
 @keyframes blinking {
   from { border-color: transparent }
   to { border-color: black; }
+}
+
+.popupOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup {
+  position: relative;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.popupTitle {
+  margin-bottom: 10px;
+}
+
+.popupInput {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-right: 40px;
+  border-radius: 5px;
+  background-color: #e6dfdf;
+  z-index: 1000;
+}
+
+.popupButtonLink {
+  display: inline-block;
+  margin-top: 20px;
+  color: inherit;
+  text-decoration: none;
+  border-radius: 5px;
 }
 
 @media (max-width: 768px) {
